trunk/Archive2/a6/04c61047b97eef/output
main.cpp: In function 'int main()':
main.cpp:11:5: error: static assertion failed: is not the same size as its member
     static_assert(sizeof(A) == sizeof(A::byte), "is not the same size as its member");
     ^
